# mdrpc

./: CMakeLists.txt  README.md
document/: 2.protobuff数据序列化.md  4.rpc远程过程调用.md
example/: readme.txt
example/callee/: CMakeLists.txt  user_service.cc
example/conf/: test.conf
example/protobuff/pbgen/: user.pb.cc  user.pb.h
mdrpc/: CMakeLists.txt
mdrpc/include/: mdrpc_application.h  mdrpc_provider.h
mdrpc/src/: mdrpc_application.cc  mdrpc_provider.cc
src/: readme.txt
test/protobuff/: main.cc
